------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------
August xx 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
	
	* Now compiles with gcc
	* Added necromancers

August 14 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Certain small changes to mihail so it know finds it's missing FeLib...

	Added instructions to create symbolic link to FeLib, if it isn't distributed for the user.

August 14 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Added some comments to the Febot code
	* Hex's new MIHAIL version added to CVS

August 14 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* iosystem::StringQuestion now takes the destination string as an argument
	  and returns whether the user aborted the question or not
	* Configuration system has been standardized and moved largely to FeLib
	* Added Febot engine which can be used by the Oracle of the Holy Haven of Gurus
	  when the time comes


	